# ECG-Heartbeat-Classification

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  main.py  projectstructure.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
notebooks/: 1_Data_Exploration.ipynb
saved_models/: scaler.joblib
scripts/: capture_screenshot.py  check_diagnose.py  check_ptbxl.py  clinical_eval.py  get_ptbxl.py  make_samples.py  train_diagnostic.py  train_ensemble.py
src/: __init__.py  cli.py  config.py  data_loader.py  diagnose.py  digitization.py  evaluate.py  model.py  predict.py  train.py  utils.py
src/diagnostic/: __init__.py  architectures.py  augment.py  config.py  data.py  ensemble.py  evaluate.py  model.py  train.py
tests/: test_architectures.py  test_config.py  test_data_loader.py  test_diagnostic_model.py  test_digitization.py  test_model.py
